--- a/construction/views/project.xml
+++ b/construction/views/project.xml
@@ -37,6 +37,8 @@
                     <field name="user_id"/>
                     <field name="start_date"/>
                     <field name="end_date"/>
+                    <field name="total_es" sum="Total Estimated"/>
+                    <field name="total_act" sum="Total Cost"/>
                     <field name="state" readonly="1" />
                 </tree>
             </field>
@@ -189,6 +191,9 @@
                     <field name="partner_id"/>
                     <field name="user_id"/>
                     <field name="employee_id"/>
+                    <field name="boq_amount" sum="Total Boq"/>
+                    <field name="total_es" sum="Total Estimated"/>
+                    <field name="actual_amount" sum="Total Actual"/>
                     <field name="state"/>
                 </tree>
             </field>
@@ -439,19 +444,6 @@
                 </page>
             </field>
         </record>
-
-<!--        <record id="job_cost_task_form_view" model="ir.ui.view">-->
-<!--            <field name="name">project.task.inherited.form</field>-->
-<!--            <field name="model">project.task</field>-->
-<!--            <field name="inherit_id" ref="project.view_task_form2"/>-->
-<!--            <field name="arch" type="xml">-->
-<!--                <xpath expr="//div[@name='button_box']" position="inside">-->
-<!--                    <button name="task_to_jobcost_action" type="object" class="oe_stat_button" icon="fa-book">-->
-<!--                        <field string="Task costs" name="job_cost_count" widget="statinfo"/>-->
-<!--                    </button>-->
-<!--                </xpath>-->
-<!--            </field>-->
-<!--        </record>-->
 
     </data>
 </odoo>
