--- a/construction/views/account_invoice_view.xml
+++ b/construction/views/account_invoice_view.xml
@@ -2,34 +2,34 @@
 <odoo>
     <data>
             
-        <record id="customer_progress_bill_add" model="ir.ui.view">
-            <field name="name">account.invoice.progress.form.view</field>
-            <field name="model">account.move</field>
-            <field name="inherit_id" ref="account.view_move_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='partner_id']" position="after">
-                    <field name="job_cost_id"/>
-                    <field name="progress_bill_title" attrs="{'readonly': [['state', 'not in', ['draft']]]}"/>
-                    <field name="project_id" attrs="{'readonly': [['state', 'not in', ['draft']]]}"/>
-                </xpath>
-                <xpath expr="//group[@class='oe_subtotal_footer']" position="after">
-                    <group string="Progress Billing Information">
-                        <group>
-                            <field name="total_progress_billing"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="invoice_to_date"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="remaining_progress_billing"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                        </group>
-                        <group>
-                            <field name="previously_invoice" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="previously_invoice_due" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="current_invoice"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="less_paid_amount"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="total_due"  widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                        </group>
-                     </group>
-                </xpath>
-            </field>
-        </record>
+<!--        <record id="customer_progress_bill_add" model="ir.ui.view">-->
+<!--            <field name="name">account.invoice.progress.form.view</field>-->
+<!--            <field name="model">account.move</field>-->
+<!--            <field name="inherit_id" ref="account.view_move_form"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <xpath expr="//field[@name='partner_id']" position="after">-->
+<!--                    <field name="job_cost_id"/>-->
+<!--                    <field name="progress_bill_title" attrs="{'readonly': [['state', 'not in', ['draft']]]}"/>-->
+<!--                    <field name="project_id" attrs="{'readonly': [['state', 'not in', ['draft']]]}"/>-->
+<!--                </xpath>-->
+<!--                <xpath expr="//group[@class='oe_subtotal_footer']" position="after">-->
+<!--                    <group string="Progress Billing Information">-->
+<!--                        <group>-->
+<!--                            <field name="total_progress_billing"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="invoice_to_date"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="remaining_progress_billing"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                        </group>-->
+<!--                        <group>-->
+<!--                            <field name="previously_invoice" widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="previously_invoice_due" widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="current_invoice"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="less_paid_amount"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                            <field name="total_due"  widget="monetary" options="{'currency_field': 'currency_id'}"/>-->
+<!--                        </group>-->
+<!--                     </group>-->
+<!--                </xpath>-->
+<!--            </field>-->
+<!--        </record>-->
 
         <record id="asset_work_view_tree" model="ir.ui.view">
             <field name="name">asset.work.order.tree</field>
