--- a/construction/views/estimated_sheet.xml
+++ b/construction/views/estimated_sheet.xml
@@ -105,7 +105,7 @@
 							<page string="Materials">
 								<field name="material_ids" context="{'default_project': project_id}" nolabel="1">
 									<tree editable="bottom" >
-										<field name="project"/>
+										<field name="project" invisible="1"/>
 										<field name="phase_id" readonly="1" force_save="1"/>
 										<field name="task_id" domain="[('project_id', '=', project)]" options="{'no_create': True}"/>
 										<field name="product_id"/>
